Support legacy offerToReceiveAudio/offerToReceiveVideo fields in RTCOfferOptions.

BUG=619289

Review-Url: https://codereview.chromium.org/2077323003
Cr-Commit-Position: refs/heads/master@{#400927}

Former-commit-id: b0e609db70af6bab30628e7bf14ad6a8add1a40e